# website_loading_time_report

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  pyproject.toml
templates/: report.tpl
