[tool.poetry]
name = "claranet"
version = "0.1.0"
description = ""
authors = ["Flavio Henrique <flaviohenriqu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bottle = "^0.12.25"
requests = "^2.31.0"
black = "^23.3.0"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
